# xdg-trash

./: Cargo.toml  LICENSE  README.md  trash-put
src/: error.rs  lib.rs  test.rs  trash_file.rs  trashinfo.rs
src/trash/: admin_trash.rs  home_trash.rs  mod.rs  uid_trash.rs  user_trash.rs
src/trash/operations/: empty.rs  put.rs
test_files/: Text File.txt  symlink  symlink (spooky)
trash-cli/: Cargo.toml
trash-cli/src/: cli.rs  main.rs  rendering.rs  streaming_table.rs  user_input.rs
trash-cli/src/commands/: common.rs  empty.rs  fix.rs  list.rs  list_trashes.rs  mod.rs  put.rs  remove.rs  restore.rs
xdg-trash/: Cargo.toml
xdg-trash/src/: error.rs  lib.rs  test.rs  trash_file.rs
xdg-trash/src/trash/: admin_trash.rs  home_trash.rs  mod.rs
xdg-trash/src/trash/operations/: empty.rs  fix.rs  list.rs  mod.rs  put.rs
