[package]
name = "xdg-trash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", default-features = false, features = ["std"] }
displaydoc = "0.2.4"
libc = "0.2.153"
log = "0.4.21"
thiserror = "1.0.58"
urlencoding = "2.1.3"

[dev-dependencies]
microlog = "1.0.1"
