[package]
name = "trash-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
log = "0.4.21"
microlog = "1.0.1"
sha2 = "0.10.8"
xdg-trash = { path = "../xdg-trash" }
