[package]
name = "xdg-trash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", default-features = false, features = [
    "now",
    "clock",
] }
displaydoc = "0.2.4"
fs_extra = { version = "1.3.0", optional = true }
libc = "0.2.153"
log = "0.4.21"
thiserror = "1.0.58"
urlencoding = "2.1.3"

[dev-dependencies]
dircpy = "0.3.16"
microlog = "1.0.1"
tempdir = "0.3.7"

[features]
fs_extra = ["dep:fs_extra"]
